--- a/global.css
+++ b/global.css
@@ -52,3 +52,13 @@ h3 { font-size: 1.25rem; font-weight: 400; }
 	padding: 3rem 1.5rem;
 	vertical-align: baseline;
 }
+
+
+/*
+COOL COLOURS
+--color: rgb(110,43,85); /* Hosp
+--color: rgb(129,20,83); /* French Plum
+--color: rgb(102,56,84); /* Ube Halaya
+--color: rgb(104,40,96); /* Palatinate
+
+/*
