--- a/global.css
+++ b/global.css
@@ -43,7 +43,7 @@ h1 { font-size: 1.8rem; font-weight: 600; }
 h2 { font-size: 1.3rem; font-weight: 400; }
 h3 { font-size: 1.25rem; font-weight: 400; }
 
-.section {
+section {
 	width: 100vw;
 	display: flex;
 	align-items: center;
