--- a/global.css
+++ b/global.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;1,100;1,300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap');
 
 * {
     --neutral: rgb(128,128,128);
@@ -31,7 +32,7 @@ body {
     padding: 0px;
     margin: 0px;
     background: var(--light);
-    font-family: 'Nunito', sans-serif;
+    font-family: 'Montserrat', sans-serif;
     font-size: 1.25rem;
     font-weight: 300;
     color: var(--dark);
@@ -42,17 +43,18 @@ body {
 h1 { font-size: 1.8rem; font-weight: 600; }
 h2 { font-size: 1.3rem; font-weight: 400; }
 h3 { font-size: 1.25rem; font-weight: 400; }
+span { max-width: 50%; }
 
 section {
 	width: 100vw;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	text-align: center;
 	flex-direction: column;
 	padding: 3rem 1.5rem;
 	vertical-align: baseline;
 }
-
 
 /*
 COOL COLOURS
